fixed some spacing issues

--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -31,6 +31,11 @@
         flex-direction: column;
     }
 
+    .header-link-container {
+        margin-top: 20px !important;
+        text-align: right;
+    }
+
     .header-about-text {
         display: flex;
         flex-direction: column;
@@ -104,6 +109,10 @@
         flex-direction: column;
     }
 
+    .header-link-container {
+        margin-top: 10px !important;
+    }
+
     .mobile-nav {
         display: block !important;
     }
@@ -136,16 +145,8 @@
 
     .about-me-text {
         padding-right: 0 !important;
-        h1 {
-            margin-top: 39px !important;
-            text-align: center;
-        }
         p {
             margin: 30px 0;
-        }
-  
-        .about-me-button {
-            margin-top: 30px;
         }
     }
 
@@ -188,7 +189,20 @@
 
 @media (max-width: 480px) {
 
-    
+    section {
+        padding: 30px 0 !important;
+    }
+
+    h2 {
+        text-align: center;
+    }
+
+    .header-link-container {
+        display: flex !important;
+        justify-content: center !important;
+        text-align: center !important;
+    }
+
     .header-about-text {
         h3 {
             text-align: center;
@@ -204,6 +218,48 @@
     .header-button-container {
         justify-content: center !important;
         margin-top: 20px !important;
+    }
+
+    .about-me-text {
+        text-align: center;
+    }
+
+    .project-text h3 {
+        margin-top: 20px !important;
+    }
+    
+    .project-container {
+        margin: 70px 0 !important;
+        justify-content: center !important;
+        align-items: center !important;    
+        .text-right {
+            margin: 0 !important;
+            text-align: center !important;
+        }
+        .text-left {
+            margin: 0 !important;
+            text-align: center !important;
+        }
+    }  
+ 
+    .link-container-right {
+        display: flex;
+        justify-content: center !important;
+        .link-right {
+            margin-left: 0 !important;
+        }
+    }
+
+    .link-container-left {
+        display: flex;
+        justify-content: center !important;
+        .link-left {
+            margin-right: 0 !important;
+        }
+    }
+
+    .link {
+        margin: 40px 25px !important;
     }
 
     .footer-nav-container {
